[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/windows/base/ProgramPanel.gd" type="Script" id=1]
[ext_resource path="res://graphics/minimize_icon.png" type="Texture" id=2]
[ext_resource path="res://graphics/close_icon.png" type="Texture" id=3]

[node name="Window" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VB" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PC" type="PanelContainer" parent="VB"]
margin_right = 1024.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 24 )

[node name="HB" type="HBoxContainer" parent="VB/PC"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 23.0
custom_constants/separation = 12

[node name="HeaderLabel" type="Label" parent="VB/PC/HB"]
margin_top = 1.0
margin_right = 53.0
margin_bottom = 15.0
size_flags_horizontal = 2
text = "Program"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinimizeButton" type="TextureButton" parent="VB/PC/HB"]
margin_left = 966.0
margin_right = 982.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="VB/PC/HB"]
margin_left = 994.0
margin_right = 1010.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}
